# aoc_2022_ocaml

./: README.md  aoc_2022.opam  dune-project
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
day_one/: dune
