(lang dune 3.8)

(name aoc_2022)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Rainbow Asteroids")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc_2022)
 (synopsis "Advent of Code 2022 solutions")
 (description "Advent of Code 2022 solutions")
 (depends ocaml dune stdio base)
)
; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
